--- a/web/sites/mobile-msw/config/sync/field.field.node.promotion.field_promo_description.yml
+++ b/web/sites/mobile-msw/config/sync/field.field.node.promotion.field_promo_description.yml
@@ -1,20 +1,20 @@
-uuid: 14854980-0aa0-4beb-baa4-c6e81432548c
+uuid: 4af6eaef-0b9a-477e-be64-2be51fe44796
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_summary_blurb
+    - field.storage.node.field_promo_description
     - node.type.promotion
   module:
     - text
-id: node.promotion.field_summary_blurb
-field_name: field_summary_blurb
+id: node.promotion.field_promo_description
+field_name: field_promo_description
 entity_type: node
 bundle: promotion
-label: 'Summary Blurb'
+label: 'Promo Description'
 description: ''
-required: false
-translatable: true
+required: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
