--- a/web/sites/mobile-msw/config/sync/core.entity_view_display.node.promotion.teaser.yml
+++ b/web/sites/mobile-msw/config/sync/core.entity_view_display.node.promotion.teaser.yml
@@ -4,75 +4,26 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.promotion.body
+    - field.field.node.promotion.field_banner_image
+    - field.field.node.promotion.field_promo_description
+    - field.field.node.promotion.field_promo_mechanics
+    - field.field.node.promotion.field_terms_conditions
+    - field.field.node.promotion.field_url_slug
     - node.type.promotion
   module:
-    - text
     - user
 id: node.promotion.teaser
 targetEntityType: node
 bundle: promotion
 mode: teaser
 content:
-  body:
-    label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    region: content
   links:
     weight: 100
     region: content
 hidden:
   field_banner_image: true
-  field_banner_link: true
-  field_banner_link_target: true
-  field_casino_gold_only: true
-  field_enable_disable_ribbon_tag: true
-  field_field_enable_sticky_post: true
-  field_field_enable_sticky_post2: true
-  field_field_enable_sticky_pre: true
-  field_field_enable_sticky_pre2: true
-  field_hide_countdown: true
-  field_hide_promotion: true
-  field_mark_as_featured: true
-  field_meta_tags: true
-  field_post_banner_image: true
-  field_post_banner_link: true
-  field_post_banner_link_target: true
-  field_post_body: true
-  field_post_hide_countdown: true
-  field_post_hide_promotion: true
-  field_post_mark_as_featured: true
-  field_post_summary_blurb: true
-  field_post_summary_url: true
-  field_post_summary_url_target: true
-  field_post_thumbnail_image: true
-  field_product_category: true
-  field_promo_availability: true
-  field_ribbon_background_color: true
-  field_ribbon_label: true
-  field_ribbon_text_color: true
-  field_sticky_background_post: true
-  field_sticky_background_post2: true
-  field_sticky_background_pre: true
-  field_sticky_background_pre2: true
-  field_sticky_link_target_post: true
-  field_sticky_link_target_post2: true
-  field_sticky_link_target_pre: true
-  field_sticky_link_target_pre2: true
-  field_sticky_text_color_post: true
-  field_sticky_text_color_post2: true
-  field_sticky_text_color_pre: true
-  field_sticky_text_color_pre2: true
-  field_sticky_url_post: true
-  field_sticky_url_post2: true
-  field_sticky_url_pre: true
-  field_sticky_url_pre2: true
-  field_summary_blurb: true
-  field_summary_url: true
-  field_summary_url_target: true
+  field_promo_description: true
+  field_terms_conditions: true
   field_thumbnail_image: true
+  field_url_slug: true
   langcode: true
