--- a/web/sites/mobile-msw/config/sync/field.storage.node.field_promo_mechanics.yml
+++ b/web/sites/mobile-msw/config/sync/field.storage.node.field_promo_mechanics.yml
@@ -1,16 +1,16 @@
-uuid: 5b20e3b2-253d-469a-88b6-5aa9e4ae704e
+uuid: 3115d277-c4c9-48bf-8eff-56cda4f90f6e
 langcode: en
 status: true
 dependencies:
   module:
-    - link
     - node
-id: node.field_sticky_url_pre2
-field_name: field_sticky_url_pre2
+    - text
+id: node.field_promo_mechanics
+field_name: field_promo_mechanics
 entity_type: node
-type: link
+type: text_with_summary
 settings: {  }
-module: link
+module: text
 locked: false
 cardinality: 1
 translatable: true
