--- a/web/sites/zipang-casino/config/sync/core.extension.yml
+++ b/web/sites/zipang-casino/config/sync/core.extension.yml
@@ -37,6 +37,7 @@ module:
   file: 0
   filter: 0
   image: 0
+  image_style_warmer: 0
   imageapi_optimize: 0
   imageapi_optimize_binaries: 0
   imce: 0
