--- a/web/sites/mobile-msw/config/sync/views.view.promotions.yml
+++ b/web/sites/mobile-msw/config/sync/views.view.promotions.yml
@@ -459,6 +459,47 @@ display:
           entity_type: node
           entity_field: langcode
           plugin_id: language
+        field_url_slug_value:
+          id: field_url_slug_value
+          table: node__field_url_slug
+          field: field_url_slug_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_url_slug_value_op
+            label: 'URL slug (field_url_slug)'
+            description: ''
+            use_operator: false
+            operator: field_url_slug_value_op
+            identifier: field_url_slug_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+              subadmin: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
       filter_groups:
         operator: AND
         groups:
@@ -520,6 +561,7 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
