PACIFIC-253 Created new view for image optimize pipeline  sliders

--- a/web/sites/jamboree-casino/config/sync/core.extension.yml
+++ b/web/sites/jamboree-casino/config/sync/core.extension.yml
@@ -38,6 +38,8 @@ module:
   file: 0
   filter: 0
   image: 0
+  imageapi_optimize: 0
+  imageapi_optimize_binaries: 0
   imce: 0
   jamboree_404: 0
   jamboree_all_games_config: 0
@@ -69,7 +71,6 @@ module:
   paragraphs: 0
   paragraphs_type_permissions: 0
   path: 0
-  promotions_page_config: 0
   quickedit: 0
   rdf: 0
   rest: 0
