Sync file for adding place of birth

--- a/web/sites/msw/config/sync/webcomposer_form_manager.form.msw_registration_form_online.birthdate.yml
+++ b/web/sites/msw/config/sync/webcomposer_form_manager.form.msw_registration_form_online.birthdate.yml
@@ -1,5 +1,8 @@
 field_settings:
   label: ''
+  placeholder: 'Date of Birth'
+  date-format: YYYY/MM/DD
+  annotation: ''
 field_validations:
   required:
     enable: 1
