PACIFIC-254 Changes for 777baby slider optimization
1) added view for preview and 2.1 for new sliders
2) added modules image_optimize_pipeline and image_style_warmer
3) added new image style "Slider"

--- a/web/sites/777baby-casino/config/sync/core.extension.yml
+++ b/web/sites/777baby-casino/config/sync/core.extension.yml
@@ -37,6 +37,9 @@ module:
   file: 0
   filter: 0
   image: 0
+  image_style_warmer: 0
+  imageapi_optimize: 0
+  imageapi_optimize_binaries: 0
   imce: 0
   lang_dropdown: 0
   language: 0
