--- a/web/sites/mobile-zedbet/config/sync/language.entity.en.yml
+++ b/web/sites/mobile-zedbet/config/sync/language.entity.en.yml
@@ -7,11 +7,11 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: ''
-    webcomposer_language_custom_label: 'English (Asia)'
+    webcomposer_language_custom_label: 'English (Korea)'
 _core:
   default_config_hash: lBXDpdDPXQtrfTJQhr6MjRJJEEyYSoRJ0acdvHLsWeA
 id: en
-label: 'English (Asia)'
+label: 'English (Korea)'
 direction: ltr
 weight: -10
 locked: false
