--- a/web/sites/mobile-zedbet/config/sync/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-zedbet/config/sync/webcomposer_config.header_configuration.yml
@@ -46,7 +46,7 @@ product_balance_id: ''
 total_balance_label: 'Total Balance:'
 balance_mapping: "5|Casino\r\n16|Zedbet Sports"
 balance_label_override: ''
-currency_balance_mapping: "5|THB,TUS\r\n6|THB,TUS"
+currency_balance_mapping: "5|THB,TUS,KRW\r\n6|THB,TUS,KRW"
 excluded_balance_mapping: ''
 currency_label_mapping: ''
 value: null
