--- a/web/sites/mobile-zedbet/config/sync/webcomposer_form_manager.form.zedbet_registration_form.currency.yml
+++ b/web/sites/mobile-zedbet/config/sync/webcomposer_form_manager.form.zedbet_registration_form.currency.yml
@@ -1,8 +1,8 @@
 field_settings:
   label: Currency
   placeholder: Currency
-  choices: "103|THB\r\n134|USDT"
-  portal_id_to_currency_mapping: "289|103,134\r\n286|103,134\r\n288|103,134"
+  choices: "103|THB\r\n104|KRW\r\n134|USDT"
+  portal_id_to_currency_mapping: "289|103,104,134\r\n286|103,104,134\r\n288|103,104,134"
 field_validations:
   required:
     enable: 1
